--- a/Copy_of_day7_lab_megatelco_tree_model(II).ipynb
+++ b/Copy_of_day7_lab_megatelco_tree_model(II).ipynb
@@ -403,7 +403,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "How is the model performing?"
+        "How is the model performing? The model is preforming at a\n",
+        "71.11% accuracy on the train test."
       ],
       "metadata": {
         "id": "O9_93xffzjOA"
@@ -453,7 +454,9 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Is overfitting taking place?  Check accuracy when predicting on the test set."
+        "Is overfitting taking place?  Check accuracy when predicting on the test set.\n",
+        "\n",
+        "overfitting is not taking place because the differnce between the test and the training data is not a huge difference."
       ],
       "metadata": {
         "id": "F1xdUAveIZ3q"
